[gd_scene load_steps=7 format=3 uid="uid://ddj141ctmre2w"]

[ext_resource type="Script" path="res://scripts/Menu.gd" id="1_crqvn"]
[ext_resource type="Texture2D" uid="uid://dmdvqqey8q31l" path="res://assets/background.jpg" id="1_gyqi7"]
[ext_resource type="Texture2D" uid="uid://det2ss4c26pps" path="res://assets/resized.jpg" id="2_7svts"]
[ext_resource type="Texture2D" uid="uid://ba2pviatujqd1" path="res://assets/label_new_game.png" id="3_3n4cy"]
[ext_resource type="Texture2D" uid="uid://f3r1pn7juyo" path="res://assets/label_continue.png" id="4_i47we"]
[ext_resource type="Texture2D" uid="uid://ctbrdjjkqi6pa" path="res://assets/label_options.png" id="5_5t623"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_crqvn")

[node name="MenuCanvas" type="CanvasLayer" parent="."]

[node name="Background" type="TextureRect" parent="MenuCanvas"]
offset_right = 640.0
offset_bottom = 360.0
mouse_filter = 2
texture = ExtResource("1_gyqi7")
expand_mode = 2

[node name="MenuContainer" type="MarginContainer" parent="MenuCanvas"]
offset_right = 640.0
offset_bottom = 360.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 32

[node name="MenuContent" type="VBoxContainer" parent="MenuCanvas/MenuContainer"]
layout_mode = 2

[node name="Splash" type="HBoxContainer" parent="MenuCanvas/MenuContainer/MenuContent"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="SplashContent" type="TextureRect" parent="MenuCanvas/MenuContainer/MenuContent/Splash"]
custom_minimum_size = Vector2(360, 240)
layout_mode = 2
texture = ExtResource("2_7svts")
expand_mode = 2

[node name="buffer" type="HBoxContainer" parent="MenuCanvas/MenuContainer/MenuContent"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="Choices" type="HBoxContainer" parent="MenuCanvas/MenuContainer/MenuContent"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 50

[node name="NewRun" type="TextureButton" parent="MenuCanvas/MenuContainer/MenuContent/Choices"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
action_mode = 0
texture_normal = ExtResource("3_3n4cy")
stretch_mode = 0

[node name="Cards" type="TextureButton" parent="MenuCanvas/MenuContainer/MenuContent/Choices"]
layout_mode = 2
action_mode = 0
texture_normal = ExtResource("4_i47we")

[node name="Options" type="TextureButton" parent="MenuCanvas/MenuContainer/MenuContent/Choices"]
layout_mode = 2
action_mode = 0
texture_normal = ExtResource("5_5t623")

[connection signal="pressed" from="MenuCanvas/MenuContainer/MenuContent/Choices/NewRun" to="." method="_on_new_run_pressed"]
[connection signal="pressed" from="MenuCanvas/MenuContainer/MenuContent/Choices/Cards" to="." method="_on_cards_pressed"]
[connection signal="pressed" from="MenuCanvas/MenuContainer/MenuContent/Choices/Options" to="." method="_on_options_pressed"]
